# chix

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  flake.nix  justfile
.claude-plugin/: plugin.json
.claude-plugin/hooks/: format-nix
docs/plans/: 2026-02-16-merge-nix-mcp-server.md  2026-02-19-develop-run-multi-command.md  2026-02-20-stderr-truncation-upstream-design.md  2026-02-20-stderr-truncation-upstream.md
skills/nix-codebase/: SKILL.md
skills/nix-codebase/examples/: flakehub-workflow.yml  go-flake.nix  go-justfile
skills/nix-codebase/references/: flake-conventions.md  flakehub-ci.md  go-nix-workflow.md
src/: main.rs  output.rs  server.rs  validators.rs
src/tools/: cachix.rs  derivation.rs  eval.rs  flake.rs  flakehub.rs  hash.rs  log.rs  mod.rs  run.rs  search.rs  store.rs
